--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -26,3 +26,31 @@ body {
 .custom-scrollbar::-webkit-scrollbar-track {
   background-color: #f1f1f1; /* Change to desired color */
 }
+/* .ant-carousel .slick-dots-bottom {
+  bottom: -13px;
+} */
+
+.ant-carousel .slick-next {
+  right: -23px;
+  top: 96px;
+}
+.ant-carousel .slick-prev {
+  left: -23px;
+  top: 96px;
+}
+.carousel .slick-slide {
+  transition: transform 0.9s ease-in-out; /* Adjust the speed here */
+}
+/* Custom Carousel Navigation Styles */
+.carousel .slick-prev,
+.carousel .slick-next {
+  border-radius: 50%;
+  color: #fc8151; /* Text color */
+
+  text-align: center; /* Center the text horizontally */
+}
+
+.carousel .slick-prev:hover,
+.carousel .slick-next:hover {
+  color: #f1f1f1; /* Change to your desired hover color */
+}
