add loader, add favicon, changes in landing page, close popup on outside click

--- a/src/app/css/Landing.css
+++ b/src/app/css/Landing.css
@@ -1,5 +1,5 @@
 .bg_image {
-    background-image: url('../assets/LandingCover.png');
+    background-image: url('../assets/bg.png');
     background-repeat: no-repeat;
     background-size: cover;
 }
