--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,6 +6,31 @@ html,
 body {
   background-color: #171717;
   color: black;
+  --sb-track-color: linear-gradient(to right, #DA619C , #FF844A ),
+    #0a11b5;
+  --sb-thumb-color: white;
+  --sb-size: 2px;
+  font-family: 'Hellix';
+  scrollbar-color: var(--sb-thumb-color) var(--sb-track-color);
+}
+@font-face {
+  font-family: 'Hellix';
+  src: url('/fonts/Hellix.ttf') format(ttf);
+
+  font-style: normal;
+}
+body::-webkit-scrollbar {
+  width: var(--sb-size);
+}
+
+body::-webkit-scrollbar-track {
+  background: var(--sb-track-color);
+  border-radius: 10px;
+}
+
+body::-webkit-scrollbar-thumb {
+  background: var(--sb-thumb-color);
+  border-radius: 10px;
 }
 
 .main {
@@ -53,4 +78,24 @@ body {
 .carousel .slick-prev:hover,
 .carousel .slick-next:hover {
   color: #f1f1f1; /* Change to your desired hover color */
+}
+
+.stake {
+  border: 1px solid transparent;
+  border-image: linear-gradient(to right, #FFA800, #DA619C);
+  border-image-slice: 1;
+  background-color: white;
+  color: #171717;
+  transition: all 0.3s ease;
+}
+.stake:hover {
+  background-color: #1d1d1d;
+  box-shadow: 0 4px 15px rgba(218, 97, 156, 0.4), 0 4px 15px rgba(255, 132, 74, 0.4);
+
+  color: white;
+  /* background: linear-gradient(to right, #DA619C, #FF844A);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  background-clip: text;
+  text-fill-color: transparent; */
 }
