--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,16 +6,15 @@ html,
 body {
   background-color: #171717;
   color: black;
-  --sb-track-color: linear-gradient(to right, #DA619C , #FF844A ),
-    #0a11b5;
+  --sb-track-color: linear-gradient(to right, #da619c, #ff844a), #0a11b5;
   --sb-thumb-color: white;
   --sb-size: 2px;
-  font-family: 'Hellix';
+  font-family: "Hellix";
   scrollbar-color: var(--sb-thumb-color) var(--sb-track-color);
 }
 @font-face {
-  font-family: 'Hellix';
-  src: url('/fonts/Hellix.ttf') format(ttf);
+  font-family: "Hellix";
+  src: url("/fonts/Hellix.ttf") format(ttf);
 
   font-style: normal;
 }
@@ -82,17 +81,16 @@ body::-webkit-scrollbar-thumb {
 
 .stake {
   border: 1px solid transparent;
-  border-image: linear-gradient(to right, #FFA800, #DA619C);
+  border-image: linear-gradient(to right, #ffa800, #da619c);
   border-image-slice: 1;
   background-color: white;
   color: #171717;
   transition: all 0.3s ease;
 }
 .stake:hover {
-  background-color: #1d1d1d;
-  box-shadow: 0 4px 15px rgba(218, 97, 156, 0.4), 0 4px 15px rgba(255, 132, 74, 0.4);
+  box-shadow: 0 4px 15px rgba(218, 97, 156, 0.4),
+    0 4px 15px rgba(255, 132, 74, 0.4);
 
-  color: white;
   /* background: linear-gradient(to right, #DA619C, #FF844A);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
